objects/RB_Products__c.object
<CustomObject>
    <description>This object is created to related products under Account and RB</description>
    <fields>
        <fullName>ABB_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added for Req- 6458, STS R3.0, Recurring Business Stream</description>
        <label>ABB Location</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 4 AND 2 AND 5 AND 3 AND 6 AND 7) OR 8 OR 9</booleanFilter>
            <filterItems>
                <field>ABB_Location__c.BU__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.DIV__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.BU__c</field>
                <operation>notEqual</operation>
                <value>ZCCO, ZCRE, ZCVA</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.DIV__c</field>
                <operation>notEqual</operation>
                <value>ZC</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.Activity__c</field>
                <operation>notEqual</operation>
                <value>Sales, Admin/Corporate, Other, R&amp;D, Warehouse or Logistics, Training</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.Activity__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>ABB CCP Integration</value>
            </filterItems>
            <filterItems>
                <field>$User.DisabledLookupFilterMode__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ABB_Location__c</referenceTo>
        <relationshipLabel>RB Products</relationshipLabel>
        <relationshipName>RB_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RB Products</relationshipLabel>
        <relationshipName>RB_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <globalPicklist>Currency</globalPicklist>
        <label>Currency</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_PG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary PG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Group1__c</fullName>
        <formula>Product_Name__r.Product_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Group_Formula__c</fullName>
        <formula>Text(Product_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>RB Products</relationshipLabel>
        <relationshipName>RB_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recurring_Business__c</fullName>
        <label>Recurring Business</label>
        <referenceTo>Recurring_Business__c</referenceTo>
        <relationshipLabel>RB Products</relationshipLabel>
        <relationshipName>RB_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice1__c</fullName>
        <label>TotalPrice1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <formula>Quantity__c  *  Sales_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>RB Products</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Primary_PG__c</columns>
        <columns>Product_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Sales_Price__c</columns>
        <columns>Quantity__c</columns>
        <columns>Recurring_Business__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RB-{0000}</displayFormat>
        <label>RB Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RB Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>